app: Support multiple audio engines
* AAudio (was already present)
* OpenSL ES

Signed-off-by: Flopster101 <nahuelgomez329@gmail.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -28,4 +28,5 @@ find_library(aaudio-lib aaudio)
 target_link_libraries(usbaudio
     tinyalsa
     ${log-lib}
-    ${aaudio-lib})
+    ${aaudio-lib}
+    OpenSLES)
