app: Support for microphones (input to host)
Can select: speaker only, mic, none, both.

Also splits the native code into several files because it was getting quite
messy already.

Mic is AAudio-only.

Signed-off-by: Flopster101 <nahuelgomez329@gmail.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -19,7 +19,14 @@ target_include_directories(tinyalsa PUBLIC
     ${CMAKE_SOURCE_DIR}/tinyalsa/include)
 
 # Define our JNI library
-add_library(usbaudio SHARED native-lib.cpp)
+add_library(usbaudio SHARED 
+    native-lib.cpp
+    logging/logging.cpp
+    audio/aaudio_engine.cpp
+    audio/opensl_engine.cpp
+    audio/java_audio_track_engine.cpp
+    core/bridge.cpp
+)
 
 # Link libraries
 find_library(log-lib log)
